fix some ui issues with messages and login_lock.html

--- a/conf/locale/he/LC_MESSAGES/django.po
+++ b/conf/locale/he/LC_MESSAGES/django.po
@@ -2118,7 +2118,7 @@ msgstr "התחברות"
 
 #: .\users\templates\login.html:47
 msgid "Incorrect username or password."
-msgstr "שם משתמש או סיסמה שגויים"
+msgstr "שם משתמש או סיסמה שגויים."
 
 #: .\users\templates\login.html:49
 msgid "Please note, the number of attempts is limited."
